<resources>
    <string name="app_name">Deeksha for Good</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ok_three_times">Tap OK three times!</string>
    <string name="ok">ok</string>
    <string name="choose_time">Choose time</string>
    <string name="spinner_prompt">Choose option</string>
    <string name="question2">Select option \'MAIL\' from the dropdown-menu.</string>
    <string name="correct_answer">Correct Answer!</string>
    <string name="next">next</string>
    <string name="incorrect_answer">Incorrect Answer!</string>
    <string name="choose_date">Choose date</string>
    <string name="time_pickers">Activity 5: Time pickers</string>
    <string name="calendars">Activity 4: Calendars</string>
    <string name="check_boxes">Activity 3: Check boxes</string>
    <string name="drop_down_menus">Activity 2: Drop-down menus</string>
    <string name="buttons">Activity 1: Buttons</string>
    <string name="score">Score:</string>
    <string-array name="options_array">
        <item>Phone call</item>
        <item>Mail</item>
        <item>Message</item>
        <item>Skype</item>
    </string-array>

</resources>
