<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/level1"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/buttons" />
        <item
            android:id="@+id/level2"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drop_down_menus" />
        <item
            android:id="@+id/level3"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/check_boxes" />
        <item
            android:id="@+id/level4"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/calendars" />
       <item android:id="@+id/level5"
           android:icon="@drawable/ic_menu_send"
           android:title="@string/time_pickers"/>
    </group>
</menu>
